2008-06-01  Alexey Torkhov  <atorkhov@gmail.com>

	* Fixing library to compile under GCC 4.3.

2007-11-25  Al Riddoch  <alriddoch@googlemail.com>

	* mercator.spec.in: Break out the static libraries into their own
	  package. Add a new sub package for the documentation.

	* Doxyfile: Do an automated update of the doxygen configuration.

2007-11-05  Al Riddoch  <alriddoch@googlemail.com>

	* acinclude.m4: Update to the latest pkgconfig check macros.

	* configure.ac: Use the latest pkgconfig macros, provide more useful
	  error messages when libraries can't be found. Increment the version
	  number for future release.

	* NEWS: Add news to test distribution of latest version.

	* AUTHORS: Update maintainers email address.

	* mercator.spec.in: Disable dependencies, and use multiple CPU cores
	  when building the rpm.

2007-11-05  Al Riddoch  <alriddoch@zepler.org>

	* tests/testForest.cpp: Add some more straightforward coverage.

2007-09-22  Al Riddoch  <alriddoch@zepler.org>

	* Doxyfile: Update to a more recent version.

2007-09-20  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Area.cpp, Mercator/Area.h, Mercator/AreaShader.cpp,
	  Mercator/AreaShader.h, Mercator/BasePoint.h, Mercator/RandCache.h:
	  Add doc comments for some members.

2007-09-20  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Buffer.h, Mercator/DepthShader.h, Mercator/FillShader.h,
	  Mercator/GrassShader.h, Mercator/RandCache.h, Mercator/Segment.cpp,
	  Mercator/ThresholdShader.h: Add doc comments for some members.

2007-09-20  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.cpp, Mercator/ShaderFactory.cpp,
	  Mercator/ShaderFactory.h, Mercator/ThresholdShader.h: Add doc
	  comments for some members.

2007-09-18  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Area.cpp, Mercator/Forest.h, Mercator/Surface.cpp,
	  Mercator/Surface.h, Mercator/TileShader.h: Add doc comments for
	  some members.

2007-09-18  Al Riddoch  <alriddoch@zepler.org>
