@@ -1,3 +1,7 @@
+2008-07-02  Erik Hjortsberg <erik.hjortsberg@iteam.se>
+
+	* Mercator/Segment.cpp: Delete surfaces at shut down, else we'll have a memory leak.
+
 2008-06-01  Alexey Torkhov  <atorkhov@gmail.com>
 
 	* Fixing library to compile under GCC 4.3.
